outputs/csi300-test/eoh/2025-07-28_13-42-39/evaluations/problem_eval-1110895534429637706_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 16
    This Python function `heuristics_v2` generates a Series of heuristic factor values based on the input DataFrame's market features, without normalizing the data, reflecting potential signals for future stock return heuristics_matrix
                                                                                                                   ^
SyntaxError: unterminated string literal (detected at line 16)
